kubernetes/keycloak/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.4.0
          args:
            - start
            - --hostname=keycloak.cicd.com
            - --http-port=8080
            - --hostname-strict=false
            - --http-enabled=true
            - --proxy-headers=xforwarded # Note: use xforwarded for ingress controllers
            - --verbose
          ports:
            - containerPort: 8080
